LendersApp/src/objects/VerificationMaster__c.object
<CustomObject>
    <fields>
        <fullName>Action_Link_Label__c</fullName>
        <label>Action Link Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Link__c</fullName>
        <label>Action Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Verification_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>PreQualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move to Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Verification Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type__c</columns>
        <columns>Notes__c</columns>
        <columns>Stage__c</columns>
        <columns>Renewal__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Action_Link__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Verification Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Verification Masters</pluralLabel>
    <recordTypes>
        <fullName>Business_Reports</fullName>
        <active>true</active>
        <label>Business Reports</label>
    </recordTypes>
    <recordTypes>
        <fullName>Landlord</fullName>
        <active>true</active>
        <label>Landlord</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Site_Inspection</fullName>
        <active>true</active>
        <label>Site Inspection</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trade_Reference</fullName>
        <active>true</active>
        <label>Trade Reference</label>
    </recordTypes>
    <recordTypes>
        <fullName>UCC</fullName>
        <active>true</active>
        <label>UCC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web_Search</fullName>
        <active>true</active>
        <label>Web Search</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>